Edited wiki page TOC through web user interface.

--- a/wiki/TOC.wiki
+++ b/wiki/TOC.wiki
@@ -29,8 +29,9 @@
     * [FlashPlatform Flash Platform]
   * Documentation
     * [Tamarin Tamarin]
-    * [ASC ActionScript Compiler]
-    * [ABC ActionScript Byte Code]
+    * [ASC ActionScript Compiler] (ASC)
+    * [ABC ActionScript Byte Code] (ABC)
+    * [SWC SWC]
     * [Projector Projector]
     * [Security Security]
     * [Examples Examples]
